Venda fix quantidade venda produto